packages/webassemblyjs/test/fixtures/conversions/type-errors/wrap/module.wast
(module (func (result i32) (i32.wrap/i64 (f32.const 0))))
